[gd_scene load_steps=2 format=3 uid="uid://d1up6u5wg74n5"]

[ext_resource type="Script" uid="uid://cw6cg7l0tm33s" path="res://01_Main_Screen/02_Levels_Collection/scripts/popup_numbers_collection.gd" id="1_eegtb"]

[node name="popup_Numbers_Collection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_eegtb")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 60
theme_override_constants/v_separation = 60
columns = 5

[node name="Button" type="Button" parent="GridContainer" groups=["button_sound"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "0"

[node name="Button1" type="Button" parent="GridContainer" groups=["button_sound"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "1"

[node name="Button2" type="Button" parent="GridContainer" groups=["button_sound"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "2"

[node name="Button3" type="Button" parent="GridContainer" groups=["button_sound"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "3"

[node name="Button4" type="Button" parent="GridContainer" groups=["button_sound"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "4"

[node name="Button5" type="Button" parent="GridContainer" groups=["button_sound"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "5"

[node name="Button6" type="Button" parent="GridContainer" groups=["button_sound"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "6"

[node name="Button7" type="Button" parent="GridContainer" groups=["button_sound"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "7"

[node name="Button8" type="Button" parent="GridContainer" groups=["button_sound"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "8"

[node name="Button9" type="Button" parent="GridContainer" groups=["button_sound"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "9"

[node name="Button10" type="Button" parent="GridContainer" groups=["button_sound"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "10"

[connection signal="button_down" from="GridContainer/Button1" to="." method="_on_button_1_button_down"]
[connection signal="button_up" from="GridContainer/Button1" to="." method="_on_button_1_button_up"]
